--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
       <version>2.7</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>4.2.2</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
